--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 
 # Created by https://www.gitignore.io/api/macos,vscode,python
 # Edit at https://www.gitignore.io/?templates=macos,vscode,python
